--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class ="row" id="display">
             <p data-previous id="previous"></p>
-            <input id="inputs" type="text" value="0" maxlength="9" onfocus="this.value = this.value">
+            <input data-input id="inputs" type="text" value="0" maxlength="9" onfocus="this.value = this.value">
         </div>
    
     <div class="row">
@@ -42,9 +42,11 @@
     <div class="row">
         <button data-number id="zero">0</button>
         <button data-number>.</button>
-        <button data-equals id="equals">=</button>
+        <button data-equals id="sum">=</button>
     </div>
     </div>
+
+    <script src="myscript.js"></script>
 
 </body>
 </html>
